2004-01-18  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : mark TreeSelection.GetSelectedRows return
	list element_type as Gtk.TreePath.
	* gtk/gtk-api.xml : regen

2004-01-18  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : mark TreeSelection.GetSelectedRows model
	param as out.
	* gtk/gtk-api.xml : regen

2004-01-18  John Luke  <jluke@cfl.rr.com>

	* vte/Vte.metadata: fix to generate signals
	* vte/vte-api.xml: regen
	* samples/VteTest.cs: remove my home dir path
	
2004-01-17  John Luke  <jluke@cfl.rr.com>

	* configure.in: detect and compile vte-sharp  (require vte-0.11.10)
	* Makefile.in: add vte to subdirs
	* vte/*:
	* sources/makefile:
	* sources/gtk-sharp-sources.xml: add vte
	* samples/VteTest.cs: add incomplete test/sample
	* samples/Makefile.in: add vte-test.exe target
	
2004-01-15  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* generator/Method.cs: Methods which returns void and has a single out parameter
	  like void Foobar (..., out int baz, ...) are turned into the more .NET like
	  signature int Foobar (...), this fixes bug 46392
	* generator/Signature.cs: Ditto
	* generator/MethodBody.cs: Ditto
	* gtk/ListStore.custom: Ditto
	* gtk/TextBuffer.custom: Ditto
	* gtk/TreeStore.custom: Ditto

2004-01-13  Tambet Ingo  <tambet@ximian.com>

	* gtk-sharp.pc.in : add libdir var
	* generator/SymbolTable.cs : add GByteArray mapping.

2004-01-13  Mike Kestner  <mkestner@ximian.com>

	* generator/Signal.cs : use ValueArray to assemble parms arg for
	g_signal_chain_from_overriden call.  Initialize retval GValue for
	above.
	* glib/Object.cs : g_signal_chain_from_overridden parms are IntPtrs.
	* glib/TypeConverter.cs : handle unboxed ValueTypes.
	* glib/Value.cs : handle unboxed struct types.  add ctor for init'd
	unset Values.
	* glib/ValueArray.cs : new binding for GValueArray used by VMs.
	* glue/valuearray.c : field accessors
	* glue/Makefile.am : add new glue file
	* glue/makefile.win32 : add new glue file
	[Fixes #52680]
