@@ -143,16 +143,18 @@ void LongComputation ()
       </Docs>
     </Member>
     <Member MemberName="Init">
-      <MemberSignature Language="C#" Value="public static void Init (ref string [] args);" />
+      <MemberSignature Language="C#" Value="public static void Init (string progname, ref string [] args);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
       </ReturnValue>
       <Parameters>
+        <Parameter Name="progname" Type="System.String" />
         <Parameter Name="args" Type="System.String []&amp;" />
       </Parameters>
       <Docs>
         <summary>Initializes Gtk# for operation.</summary>
+        <param name="progname">The name of your program</param>
         <param name="args">The arguments to pass to the toolkit</param>
         <remarks>
           <para>
@@ -164,7 +166,7 @@ void LongComputation ()
 	    This function will terminate your program if it was unable
 	    to initialize the GUI for some reason. If you want your
 	    program to fall back to a textual interface you want to
-	    call <see cref="M:Gtk.Application.InitCheck(System.String []&amp;)" /> instead.
+	    call <see cref="M:Gtk.Application.InitCheck(System.String, System.String []&amp;)" /> instead.
 	  </para>
           <para>
 	    The args values will be modified after Gtk has removed the
@@ -174,18 +176,20 @@ void LongComputation ()
       </Docs>
     </Member>
     <Member MemberName="InitCheck">
-      <MemberSignature Language="C#" Value="public static bool InitCheck (ref string [] args);" />
+      <MemberSignature Language="C#" Value="public static bool InitCheck (string progname, ref string [] args);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Boolean</ReturnType>
       </ReturnValue>
       <Parameters>
+        <Parameter Name="progname" Type="System.String" />
         <Parameter Name="args" Type="System.String []&amp;" />
       </Parameters>
       <Docs>
         <summary>Initializes Gtk# for operation, probes window system.</summary>
         <returns>true if the toolkit was initialized, false if the
         windowing system can not be initilized.</returns>
+        <param name="progname">The name of your program</param>
         <param name="args">The arguments to pass to the toolkit</param>
         <remarks>
           <para>
@@ -195,12 +199,6 @@ void LongComputation ()
 	    toolkit was initialized, a false value means that the
 	    toolkit could not be initialized.  If you do not want to
 	    do dual GUI/text applications, you can use <see cref="M:Gtk.Application.Init()" /> instead. 
-	  </para>
-          <para>
-	    This function will terminate your program if it was unable
-	    to initialize the GUI for some reason. If you want your
-	    program to fall back to a textual interface you want to
-	    call <see cref="M:Gtk.Application.InitCheck(System.String []&amp;)" /> instead.
 	  </para>
         </remarks>
       </Docs>
@@ -224,11 +222,11 @@ void LongComputation ()
 	    This function will terminate your program if it was unable
 	    to initialize the GUI for some reason. If you want your
 	    program to fall back to a textual interface you want to
-	    call <see cref="M:Gtk.Application.InitCheck(System.String []&amp;)" /> instead.
+	    call <see cref="M:Gtk.Application.InitCheck(System.String, System.String []&amp;)" /> instead.
 	  </para>
           <para>
 	    If you want to pass arguments from the command line use
-	    the <see cref="T:Gtk.Application.Init(System.String []&amp;)" />
+	    the <see cref="T:Gtk.Application.Init(System.String, System.String []&amp;)" />
 	    method instead. 
 	  </para>
         </remarks>
