@@ -1,3 +1,8 @@
+2003-01-13  Peter Williams  <peter@newton.cx>
+
+	* en/Gtk/Application.xml: Update Init, InitCheck functions
+	for new progname argument. Fix a paste-o in the docs for InitCheck.
+
 2004-01-13  John Luke  <jluke@cfl.rr.com>
 
 	* en/Gtk/TreeSelection.xml: add example
